cmake_minimum_required(VERSION 3.15)
project(os C)

set(CMAKE_C_STANDARD 99)

add_executable(expr2 expr2.c)
add_executable(expr22 expr22.c)
add_executable(expr3 expr3.c)
add_executable(expr31 expr31.c)
add_executable(expr32 expr32.c)
add_executable(expr4 expr4.c)
add_executable(expr41 expr41.c)
add_executable(expr5 expr5.c)
add_executable(expr51 expr51.c)
add_executable(expr6 expr6.c)
add_executable(expr62 expr62.c)
find_package(Threads REQUIRED)
target_link_libraries(expr3 Threads::Threads)
target_link_libraries(expr31 Threads::Threads)
target_link_libraries(expr32 Threads::Threads)
target_link_libraries(expr4 Threads::Threads)
target_link_libraries(expr41 Threads::Threads)